feat: add cli command

--- a/src/Sass/LoginComponent.scss
+++ b/src/Sass/LoginComponent.scss
@@ -1,6 +1,82 @@
+
+body{
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+}
+.login-wrapper {
+    background-color: white;
+
+    .login-wrapper-inner{
+        margin-left: 200px;
+    }
+    .heading{
+        margin-left: 200px;
+        font-family: system-ui;
+        font-weight: 500;
+        font-size: 35px;
+        color: rgba(0, 0, 0, 0.9);
+    }
+    .sub-heading {
+        margin-top: -20px;
+        font-family: system-ui;
+    }
+}
+
 .login-btn{
-    width: 150px;
-    height: 30px;
+    width: 300px;
+    height: 50px;
     cursor: pointer;
-    background-color: #212121;
+    background-color: #0072b1;
+    border-radius: 30px;
+    outline: none;
+    border: none;
+    font-family: system-ui;
+    font-weight: 600;
+    color: #ffffff;
+    font-size: 18px;
+    margin-top: 20px;
+    
+}
+.login-btn:hover{
+    background-color: #004c75;
+
+}
+
+.auth-inputs {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 300px;
+    .common-input{
+        height: 30px;
+        padding: 10px;
+        background-color: white;
+        outline : none;
+        border: 1px solid #212121;
+        color: #212121;
+        border-radius: 5px;
+        font-family: system-ui;
+        font-size: 16px;
+        margin: 10px, 0px;
+    }
+    .common-input :focus {
+        outline: 1px solid #0072b1;
+
+
+    }
+
+
+  ::placeholder {
+    color: #212121;
+    font-size: 16px;
+    font-family: system-ui;
+}
+}
+
+
+.linkedinLogo {
+    width: 80px;
+   
+
 }
