--- a/src/Sass/LoginComponent.scss
+++ b/src/Sass/LoginComponent.scss
@@ -5,7 +5,9 @@ body{
     height: 100vh;
 }
 .login-wrapper {
-    background-color: white;
+    background-color: white !important;
+    height: 100vh;
+
 
     .login-wrapper-inner{
         margin-left: 200px;
@@ -80,3 +82,57 @@ body{
    
 
 }
+.hr-text {
+    line-height: 1em;
+    position: relative;
+    outline: 0;
+    border: 0;
+    color: black;
+    text-align: center;
+    height: 1.5em;
+    opacity: 0.5;
+    &:before {
+      content: "";
+      // use the linear-gradient for the fading effect
+      // use a solid background color for a solid bar
+      background: linear-gradient(to right, transparent, #818078, transparent);
+      position: absolute;
+      left: 0;
+      top: 50%;
+      width: 100%;
+      height: 1px;
+    }
+    &:after {
+      content: attr(data-content);
+      position: relative;
+      display: inline-block;
+      color: black;
+  
+      padding: 0 0.5em;
+      line-height: 1.5em;
+      // this is really the only tricky part, you need to specify the background color of the container element...
+      color: #818078;
+      background-color: #fcfcfa;
+    }
+  }
+  .google-btn-container {
+    margin-left: 200px;
+    
+
+   .google-btn {
+    width: 300px !important;
+
+    }
+
+    .go-to-signup{
+       margin-left: 60px;
+       font-size: 18px;
+    }
+
+    .join-now {
+    color: #0072b1;
+    font-family: system-ui;
+    cursor: pointer;
+    font-size: 18px;
+    }
+  }
