--- a/src/components/common/PostUpdate/index.scss
+++ b/src/components/common/PostUpdate/index.scss
@@ -1,9 +1,40 @@
-.post-status-main{
+.post-status-main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  .user-details {
+    width: 550px;
+    height: auto;
+    background-color: whitesmoke;
+    margin-top: 100px;
+    border: 1px solid #b7b7b7;
+    border-radius: 7px;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
-.post-status {
+    align-items: center;
+    img {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+      border-radius: 50%;
+      margin-top: -60px;
+      border: 1px solid #b7b7b7;
+      padding: 1px;
+    }
+
+    .name {
+      font-weight: 600;
+      font-family: system-ui;
+    }
+
+    .headline {
+      font-family: system-ui;
+      margin-top: -15px;
+    }
+  }
+  .post-status {
     width: 550px;
     height: 120px;
     background-color: whitesmoke;
@@ -11,26 +42,34 @@
     border: 1px solid #b7b7b7;
     border-radius: 7px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-.open-post-modal {
-width: 80%;
-height: 50px;
-text-align: left;
-color: rgb(84, 84, 84, 0.89);
-background-color: whitesmoke;
-outline: none;
-border: 1px solid #b7b7b7;
-border-radius: 30px;
-cursor: pointer;
-padding: 15px;
-font-weight: 600;
-font-size: 16px;
-font-family: system-ui, sans-serif;
-}
-.open-post-modal:hover {
-    background-color: #dcdbdb; 
-}
 
-}
+    .post-image {
+      width: 60px;
+      height: 60px;
+      object-fit: cover;
+      border-radius: 50%;
+    }
+    .open-post-modal {
+      width: 80%;
+      height: 50px;
+      text-align: left;
+      color: rgba(84, 84, 84, 0.89);
+      background-color: whitesmoke;
+      outline: none;
+      border: 1px solid #b7b7b7;
+      border-radius: 30px;
+      margin-left: -30px;
+      cursor: pointer;
+      padding: 15px;
+      font-weight: 600;
+      font-size: 14px;
+      font-family: system-ui, sans-serif;
+    }
+
+    .open-post-modal:hover {
+      background-color: #dcdbdb;
+    }
+  }
 }
